[tool.poetry]
name = "ppo"
version = "0.1.0"
description = ""
authors = ["Eugene Teoh <eugenetwc1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
torch = {version = "^1.10.1"}
gym = {version = "^0.21.0", extras = ["atari", "accept-rom-license"]}
pytorch-lightning = "^1.5.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
