[tool.poetry]
name = "ppo"
version = "0.1.0"
description = ""
authors = ["Eugene Teoh <eugenetwc1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <=3.9.*"
torch = "^1.10.2"
gym = "<=0.20"
stable-baselines3 = "^1.4.0"
box2d-py = "^2.3.8"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
